Standardize project structure and cleanup
- Consolidated 'realspark' and 'spark' into 'spark'
- Consolidated 'testing' and 'tests' into 'tests'
- Centralized logs in 'logs/' directory
- Updated '.gitignore' and removed redundant build artifacts
- Restored 'sbt-launch.jar' (v1.9.8)
- Verified builds and native linting (cargo clippy)